<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright [2021] [Reham Albakouni, Matt Asgari Motlagh, Aidan Horemans, Courtenay Laing-Kobe, Vivek Malhotra, Kelly Shih]

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/signup_password_confirm_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:ems="10"
        android:hint="@string/confirm_pw"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_password_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_password_field"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_field"
        android:autofillHints="" />

    <TextView
        android:id="@+id/Ditto"
        android:layout_width="404dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#242121"
        android:fontFamily="serif"
        android:text="@string/ditto"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/signup_password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_email_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_email_field"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_field"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signup_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ditto"
        android:autofillHints="" />

    <EditText
        android:id="@+id/signup_email_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_name_field"
        app:layout_constraintStart_toStartOf="@+id/signup_name_field"
        app:layout_constraintTop_toBottomOf="@+id/signup_name_field"
        android:autofillHints="" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@android:color/darker_gray"
        android:elegantTextHeight="false"
        android:freezesText="false"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/signup_password_confirm_field"
        app:layout_constraintStart_toStartOf="@+id/signup_password_confirm_field"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_confirm_field"
        app:rippleColor="@android:color/darker_gray"
        app:strokeColor="@android:color/darker_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>